2006-05-08  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlfilesource.c: (gnl_filesource_class_init),
	(gnl_filesource_init):
	No more redundant bin containing filesrc and decodebin.
	We use the GnlSource controls_one and control_element() class properties
	to inform GnlSource it should control decodebin but still accept
	filesrc.
	* gnl/gnlsource.c: (gnl_source_class_init),
	(gnl_source_control_element_func), (gnl_source_add_element),
	(gnl_source_remove_element):
	* gnl/gnlsource.h:
	Added two class properties:
	_ controls_one which tells whether the class controls only one object
	_ control_element() virtual_method which should be called by subclasses
	that have several elements to specify which element should be checked
	for pad-added/pad-removed.

2006-05-05  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlfilesource.c: (gnl_filesource_class_init),
	(decodebin_pad_added_cb), (find_ghost_pad),
	(decodebin_pad_removed_cb), (gnl_filesource_init):
	* gnl/gnlfilesource.h:
	Simplify GnlFileSource to be a subclass of GnlSource.	
	* gnl/gnlsource.c: (element_pad_added_cb),
	(gnl_source_change_state):
	Add event probe for dynamic pads too.
	Don't error out in state_change.

2006-05-05  Edward Hervey  <edward@fluendo.com>

	* gnl/Makefile.am:
	* gnl/gnlfilesource.c:
	* gnl/gnlmarshal.list:
	* gnl/gnlobject.c:
	* gnl/gnloperation.c:
	* gnl/gnlsource.c:
	Remove gnlmarshal cruft that dates from... well....
	Ok, fine, that was here since 0.8 era and not used since :)

2006-05-05  Edward Hervey  <edward@fluendo.com>

	* common/check.mak:
	* configure.ac:
	* gnl/Makefile.am:
	* gnl/gnlfilesource.c: (hack_fakesink_new), (hack_fakesink_free),
	(find_hack_fakesink), (decodebin_new_pad_cb),
	(decodebin_pad_removed_cb), (gnl_filesource_dispose),
	(gnl_filesource_prepare), (gnl_filesource_send_event):
	* gnl/gnlmarshal.list:
	* tests/Makefile.am:

2006-05-05  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c: (gnl_composition_dispose),